@@ -1,4 +1,8 @@
 2006-05-18  Alex Roitman  <shura@gramps-project.org>
+	* src/GrampsDb/_GrampsBSDDB.py: Remove unused methods; remove
+	unused secondary tables; add more custom type holders.
+	* src/GrampsDb/_GrampsDbBase.py (GrampsDbBase.__init__): Add more
+	custom type holders.
 	* src/DisplayTabs/_BackRefList.py (edit_button_clicked): Typo.
 	* src/DataViews/_RepositoryView.py (edit, on_double_click): Catch
 	exception.
@@ -9,6 +13,8 @@
 	* data/grampsxml.rng: Update for new bookmarks.
 	* src/GrampsDb/_WriteXML.py (write_bookmarks): Add method to write
 	new bookmarks.
+	(XmlWriter.write_xml_data): Do not export name groups.
+
 	* src/GrampsDb/_ReadXML.py (start_bmark): Parse new bookmarks
 	* INSTALL: Clarify; list build-dependencies.
 	* src/GrampsDb/_ReadGrdb.py: Update progress.
